process : making init screen
yet not completed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ejy77.testex5.kr.example.ejy77.testex5.MainActivity">
+    android:background="@color/init_color"
+    tools:context="kr.ac.ajou.paran.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
