change timer counter
.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/init_color"
+    android:background="@drawable/gradation_logo"
     tools:context="kr.ac.ajou.paran.MainActivity">
 
     <TextView
