resolve memory leak issue
bitmap must be recycled

--- a/app/src/main/res/layout/activity_developer.xml
+++ b/app/src/main/res/layout/activity_developer.xml
@@ -8,6 +8,7 @@
     tools:context="kr.ac.ajou.paran.sss.init.Logo">
 
     <ImageView
+        android:id="@+id/imageDeveloper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/init_developer"
