--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,9 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="init_color">#313944</color>
+    <color name="login_input">#6D6D6D</color>
+    <color name="login_input_back">#C9CACA</color>
+    <color name="login_button">#00A0E9</color>
+    <color name="login_white">#FFFFFF</color>
 
 </resources>
