--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradation_logo"
+    android:background="@drawable/gradation"
     android:orientation="vertical"
     tools:context="kr.ac.ajou.paran.sss.login.Login">
 
