--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,7 +103,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@color/login_button"
-                    android:textColor="@color/login_white"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
                     android:text="로그인"/>
 
@@ -114,7 +114,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/login_white"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
                     android:text="회원가입"/>
 
@@ -122,7 +122,7 @@
                     android:id="@+id/textSearchPwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/login_white"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
                     android:layout_alignParentRight="true"
                     android:text="비밀번호 찾기"/>
@@ -131,7 +131,7 @@
                         android:id="@+id/temp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/login_white"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
                         android:layout_toLeftOf="@id/textSearchPwd"
                         android:text=" | "/>
@@ -139,7 +139,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/login_white"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
                     android:layout_toLeftOf="@id/temp"
                     android:text="아이디찾기"/>
@@ -155,7 +155,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/login_white"
+                    android:textColor="@color/white"
                     android:text="Powered by 하이엄(하이염~) Team"
                     android:layout_marginBottom="10dp"
                     android:layout_centerHorizontal="true"
