--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="login_input">#6D6D6D</color>
     <color name="login_input_back">#C9CACA</color>
     <color name="login_button">#00A0E9</color>
-    <color name="login_white">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
