--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,6 +93,7 @@
                         android:background="@color/login_input_back"
                         android:lines="1"
                         android:hint="Password"
+                        android:inputType="textPassword"
                         android:textColorHint="@color/login_input"
                         android:textColor="@color/login_input" />
                 </LinearLayout>
