--- a/app/src/main/res/layout/common_function_table.xml
+++ b/app/src/main/res/layout/common_function_table.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="7"
+        android:weightSum="6"
         android:background="@drawable/gradation_blue">
 
         <TextView
@@ -50,43 +50,26 @@
             android:layout_weight="1"
             android:text="FRI"
             android:textAlignment="center" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="SAT"
-            android:textAlignment="center"/>
-
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="7"
+        android:weightSum="6"
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_weight="1"
-            android:background="@color/login_input"
-            android:weightSum="32">
+            android:background="@color/table_time"
+            android:weightSum="24">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
-                android:text="08:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="09:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -98,6 +81,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="10:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -109,6 +94,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="11:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -120,6 +107,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="12:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -131,6 +120,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="01:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -142,6 +133,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="02:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -153,6 +146,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="03:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -164,6 +159,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="04:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -175,6 +172,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="05:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -186,6 +185,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="06:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -197,6 +198,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="07:00"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -208,40 +211,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"
+                android:textSize="8dp"
+                android:textColor="@color/login_input"
                 android:text="08:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:text="09:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:text="10:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:text="11:00"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
