--- a/app/src/main/res/layout/common_function_upper.xml
+++ b/app/src/main/res/layout/common_function_upper.xml
@@ -9,18 +9,18 @@
         android:id="@+id/buttonBack"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginBottom="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
         android:layout_weight="1"
         android:background="@drawable/function_back"/>
     <TextView
+        android:id="@+id/textTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="8"
         android:textStyle="bold"
         android:textSize="30dp"
         android:textAlignment="center"
-        android:layout_gravity="center_vertical"
-        android:text="더.시.추"/>
+        android:layout_gravity="center_vertical"/>
 </LinearLayout>
