--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="login_input_back">#C9CACA</color>
     <color name="login_button">#00A0E9</color>
     <color name="main_upper">#090c10</color>
+    <color name="table_time">#DDDDDD</color>
     <color name="white">#FFFFFF</color>
 
 </resources>
