--- a/app/src/main/res/layout/dialog_init_subject.xml
+++ b/app/src/main/res/layout/dialog_init_subject.xml
@@ -6,6 +6,7 @@
     android:weightSum="27"
     android:background="@drawable/gradation">
     <TextView
+        android:layout_gravity="top"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
