--- a/android/app/src/main/res/layout/activity_developer.xml
+++ b/android/app/src/main/res/layout/activity_developer.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/init_color"
-    tools:context="kr.ac.ajou.paran.sss.init.Logo">
+    android:background="@color/init_color">
 
     <ImageView
         android:id="@+id/imageDeveloper"
