--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="100"
-        tools:context="kr.ac.ajou.paran.sss.main.Main">
+        tools:context=".main.Main">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
