--- a/android/app/src/main/res/layout/activity_lecture.xml
+++ b/android/app/src/main/res/layout/activity_lecture.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
     <LinearLayout android:orientation="vertical" android:weightSum="10" android:background="@drawable/gradation" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
-    <include layout="@layout/common_function_upper"/>
+        <TextView
+            android:id="@+id/textTitle"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:textAlignment="center"
+            android:gravity="center_vertical"/>
     <LinearLayout android:orientation="horizontal" android:weightSum="5" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="4">
     <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="3" android:layout_margin="5dp">
 <include layout="@layout/common_function_table"/>
