constraint time, weekday

--- a/android/app/src/main/res/layout/activity_constraint.xml
+++ b/android/app/src/main/res/layout/activity_constraint.xml
@@ -49,8 +49,12 @@
                     android:text="학점"
                     android:background="@drawable/gradation_blue"/>
                 <TextView
+                    android:id="@+id/textScore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/login_input"
+                    android:text="19학점"
                     android:background="@color/white"/>
             </LinearLayout>
 
