--- a/android/app/src/main/res/layout/dialog_reinput.xml
+++ b/android/app/src/main/res/layout/dialog_reinput.xml
@@ -12,11 +12,13 @@
         android:text="재수강 과목 추가"
         android:textColor="@color/white"
         android:background="@drawable/gradation_blue"/>
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_gravity="center_horizontal"
+    <ListView
+        android:id="@+id/listRe"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp"/>
+        android:layout_height="150dp"
+        android:background="@color/white"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
